# bolt

./: .gitignore  CMakeLists.txt  README.md  bolt.c  bolt.h  bolt.sln  bt_buffer.c  bt_buffer.h  bt_compiler.c  bt_compiler.h  bt_config.h  bt_context.h  bt_debug.c  bt_debug.h  bt_embedding.h  bt_gc.c  bt_gc.h  bt_intrinsics.h  bt_object.c  bt_object.h  bt_op.h  bt_parser.c  bt_parser.h  bt_prelude.c  bt_prelude.h  bt_tokenizer.c  bt_tokenizer.h  bt_type.c  bt_type.h  bt_userdata.c  bt_userdata.h  bt_value.c  bt_value.h  d  main.cpp
.github/workflows/: cmake-multi-platform.yml  msbuild.yml
benchmarks/: all.bolt  alloc.bolt  array.bolt  bench.bolt  binary_tree.bolt  delta_blue.bolt  fannkuch.bolt  heap.bolt  loops.bolt  mandel.bolt  nbodies.bolt  parsing.bolt  recursion.bolt  spectral.bolt  vec2.bolt  vec2hoist.bolt
benchmarks/_foreign/: iter.dyon  iter.js  iter.lua  iter.py  iter.wren  mandel.dyon  mandel.js  mandel.lua  mandel.py  mandel.wren  vec2.dyon  vec2.js  vec2.lua  vec2.py  vec2.wren
bolt/: CMakeLists.txt  bolt.c  bolt.h  bolt.vcxproj  bt_buffer.c  bt_buffer.h  bt_compiler.c  bt_compiler.h  bt_config.h  bt_context.h  bt_debug.c  bt_debug.h  bt_embedding.c  bt_embedding.h  bt_gc.c  bt_gc.h  bt_object.c  bt_object.h  bt_op.h  bt_parser.c  bt_parser.h  bt_prelude.c  bt_prelude.h  bt_tokenizer.c  bt_tokenizer.h  bt_type.c  bt_type.h  bt_userdata.c  bt_userdata.h  bt_value.c  bt_value.h  main.cpp
bolt-cli/: CMakeLists.txt  bolt-cli.vcxproj  main.c
bolt/boltstd/: boltstd.c  boltstd.h  boltstd_arrays.c  boltstd_arrays.h  boltstd_core.c  boltstd_core.h  boltstd_io.c  boltstd_io.h  boltstd_math.c  boltstd_math.h  boltstd_meta.c  boltstd_meta.h  boltstd_regex.c  boltstd_regex.h  boltstd_strings.c  boltstd_strings.h  boltstd_tables.c  boltstd_tables.h
bolt/boltstd/picomatch/: picomatch.c
bolt/tests/: anonymous_nested.bolt  arraytest.bolt  bench.bolt  capture.uperf  compose.bolt  entity.bolt  final.bolt  if_let.bolt  main.bolt  mandel.bolt  mod.bolt  optionals.bolt  other_mod.bolt  prelude.bolt  speak.bolt  tab_alias.bolt  tables.bolt  test.bolt  testrunner.bolt  tok_test.bolt  typearraytest.bolt  upval_test.bolt  vec2.bolt  vec2hoist.bolt  ycombinator.bolt
bolt/tests/benchmarks/: all.bolt  array.bolt  loops.bolt  mandel.bolt  vec2.bolt  vec2hoist.bolt
bolt/tests/nested/: test.bolt
boltstd/: boltstd.h  boltstd_math.c  boltstd_meta.c
doc/: Bolt Embedding Guide.md  Bolt Performance.md  Bolt Programming Guide.md  Bolt Users.md
doc/Bolt Standard Library/: arrays.md  cli.md  core.md  io.md  math.md  meta.md  regex.md  strings.md  tables.md
examples/: bf.bolt  blackjack.bolt  clitools.bolt  error_handling.bolt  json.bolt  lisp.bolt  pretty_print.bolt
tests/: all.bolt  anonymous_nested.bolt  arraytest.bolt  bench.bolt  bolt.txt  branch.bolt  capture.uperf  closure.bolt  compose.bolt  defaults.bolt  export_test.bolt  for.bolt  forinst.bolt  gc.bolt  if_let.bolt  main.bolt  mandel.bolt  nested.bolt  new.bolt  optionals.bolt  run.bolt  tables.bolt  test.bolt  testrunner.bolt  tok_test.bolt  unions.bolt  vec2.bolt  ycombinator.bolt
tests/parser/: aliases.bolt  all.bolt  annotations.bolt  bindings.bolt  defaults.bolt  inference.bolt  literals.bolt  metamethods.bolt  order.bolt  type_inference.bolt
tests/parser/errors/: _scope.bolt  all.bolt  garbage.bolt  unclosed.bolt
tests/parser/inference/: _exports.bolt  all.bolt  arithmetic-operators.bolt  arrays.bolt  casting.bolt  do-block.bolt  fn-do.bolt  for-expr.bolt  if-expr.bolt  if-let.bolt  imports.bolt  iterators.bolt  logical-operators.bolt  match-expr.bolt  match-let.bolt  match.bolt  null-operators.bolt  pinning.bolt  primitives.bolt  prototypes.bolt  signatures.bolt  tableshapes.bolt  type-narrowing.bolt  weak-types.bolt
tests/regression/: 28.bolt  59.bolt  60.bolt  67.bolt  68.bolt  70.bolt  73.bolt  75.bolt  77.bolt  _scope.bolt  all.bolt
tests/runtime/: all.bolt  assignment.bolt  branching.bolt  short_circuit.bolt  signature_casting.bolt  soft_casting.bolt  weak_references.bolt
tests/runtime/virtual/: _scope.bolt  all.bolt  empty_base.bolt
tests/stdlib/: all.bolt  arrays.bolt  core.bolt  regex.bolt  strings.bolt
uperf/: uperf.c  uperf.h
